# streamget

./: .dockerignore  .gitignore  AUTHORS  ChangeLog  DEBUGGING.md  Dockerfile  Dockerfile.ubuntu12  Dockerfile.ubuntu14  Dockerfile.ubuntu16  Makefile.am  README  autogen.sh  configure.in  debug-in-docker.sh  docker-compose.yml  streamget.spec
.github/workflows/: build.yml
m4/: Makefile.am  libcurl.m4
src/: Makefile.am  daemonize.c  daemonize.h  lock.c  lock.h  main.c  url_fopen.c  url_fopen.h
